fix: try another way to fix scrollbar in apple mobile devices

--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -6,7 +6,7 @@ nav {
     background-color: #dbdbdb;
     padding: 10px;
     color: rgb(100, 100, 100);
-    z-index: 3;
+    z-index: -1;
     height: 3.5em;
     display: flex;
     align-items: center;
