--- a/src/components/Main/Scroller/Scroller.css
+++ b/src/components/Main/Scroller/Scroller.css
@@ -1,6 +1,6 @@
 #scroller-container {
     position: relative;
-    z-index: 2;
+    z-index: -2;
 }
 
 #scroller {
